--- a/data/app-data.json
+++ b/data/app-data.json
@@ -10,15 +10,15 @@
                 {
                     "label":"Tiger",
                     "word":"Tiger 1",
-                    "imgUrl": ["tiger-1.jpg?raw=true", "tiger-2.jpg?raw=true"]
+                    "imgUrls": ["tiger-1.jpg?raw=true", "tiger-2.jpg?raw=true"]
                 }, {
                     "label":"Lion",
                     "word":"Lion",
-                    "imgUrl": ["lion-1.jpg?raw=true", "lion-2.jpg?raw=true", "lion-3.jpg?raw=true", "lion-4.jpg?raw=true"]
+                    "imgUrls": ["lion-1.jpg?raw=true", "lion-2.jpg?raw=true", "lion-3.jpg?raw=true", "lion-4.jpg?raw=true"]
                 }, {
                     "label":"Squirrel",
                     "word":"Sparrow",
-                    "imgUrl": ["squirrel-1.jpg?raw=true", "squirrel-2.jpg?raw=true", "squirrel-3.jpg?raw=true", "squirrel-4.jpg?raw=true", "squirrel-5.jpg?raw=true", "squirrel-6.jpg?raw=true"]
+                    "imgUrls": ["squirrel-1.jpg?raw=true", "squirrel-2.jpg?raw=true", "squirrel-3.jpg?raw=true", "squirrel-4.jpg?raw=true", "squirrel-5.jpg?raw=true", "squirrel-6.jpg?raw=true"]
                 }
             ]
        } , {
@@ -29,11 +29,11 @@
                 {
                     "label":"Parrot",
                     "word":"Parrot",
-                    "imgUrl": ["parrot-1.jpg?raw=true", "parrot-2.jpg?raw=true"]
+                    "imgUrls": ["parrot-1.jpg?raw=true", "parrot-2.jpg?raw=true"]
                 }, {
                     "label":"Sparrow",
                     "word":"Sparrow",
-                    "imgUrl": ["sparrow-1.jpg?raw=true"]
+                    "imgUrls": ["sparrow-1.jpg?raw=true"]
                 }
             ]
        }
