--- a/data/app-data.json
+++ b/data/app-data.json
@@ -128,6 +128,17 @@
                     "imgUrls": ["bird-duck-1.jpg?raw=true", "bird-duck-2.jpg?raw=true", "bird-duck-3.jpg?raw=true"]
                 }
             ]
+       },  , {
+            "label":"Fruits",
+            "word":"Fruits",
+            "imgUrl": "https://github.com/prasadmarineni/kids/blob/main/data/img/fruits.jpg?raw=true",
+            "subItems": [
+                {
+                    "label":"Apple",
+                    "word":"apple",
+                    "imgUrls": ["fruit-eagel-1.jpg?raw=true", "fruit-eagel-2.jpg?raw=true"]
+                }
+            ]
        }
     ]
 }
