--- a/data/app-data.json
+++ b/data/app-data.json
@@ -136,7 +136,7 @@
                 {
                     "label":"Apple",
                     "word":"apple",
-                    "imgUrls": ["fruit-eagel-1.jpg?raw=true", "fruit-eagel-2.jpg?raw=true"]
+                    "imgUrls": ["fruit-apple-1.jpg?raw=true", "fruit-apple-2.jpg?raw=true"]
                 }
             ]
        }
