--- a/data/app-data.json
+++ b/data/app-data.json
@@ -293,16 +293,16 @@
                     "label": "Apricot",
                     "word": "apricot",
                     "imgUrls": [
-                        "fruit-apricots-1.jpg?raw=true",
-                        "fruit-apricots-2.jpg?raw=true"
+                        "fruit-apricot-1.jpg?raw=true",
+                        "fruit-apricot-2.jpg?raw=true"
                     ]
                 },
                 {
-                    "label": "Avocados",
-                    "word": "avocados",
+                    "label": "Avocado",
+                    "word": "avocado",
                     "imgUrls": [
-                        "fruit-avocados-1.jpg?raw=true",
-                        "fruit-avocados-2.jpg?raw=true"
+                        "fruit-avocado-1.jpg?raw=true",
+                        "fruit-avocado-2.jpg?raw=true"
                     ]
                 },
                 {
