--- a/data/app-data.json
+++ b/data/app-data.json
@@ -298,11 +298,11 @@
                     ]
                 },
                 {
-                    "label": "Avocados",
-                    "word": "Avocados",
+                    "label": "Avocado",
+                    "word": "Avocado",
                     "imgUrls": [
-                        "fruit-avocados-1.jpg?raw=true",
-                        "fruit-avocados-2.jpg?raw=true"
+                        "fruit-avocado-1.jpg?raw=true",
+                        "fruit-avocado-2.jpg?raw=true"
                     ]
                 },
                 {
