--- a/data/app-data.json
+++ b/data/app-data.json
@@ -349,8 +349,8 @@
                     "label": "Dragon Fruit",
                     "word": "Dragon Fruit",
                     "imgUrls": [
-                        "fruit-dragonfruit-1.jpg?raw=true",
-                        "fruit-dragonfruit-2.jpg?raw=true"
+                        "fruit-dragon-fruit-1.jpg?raw=true",
+                        "fruit-dragon-fruit-2.jpg?raw=true"
                     ]
                 },
                 {
